Gallery, schedule, and presenter updates

--- a/index.html
+++ b/index.html
@@ -141,13 +141,15 @@
           </div>
 
         </div>
-        <!--<div class="row">
+
+        <div class="section-header"><h2>Other Presenters</h2></div>
+        <div class="row">
           <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="200">
-              <img src="assets/img/speakers/2.jpg" alt="Speaker 2" class="img-fluid">
+              <img src="assets/img/speakers/3.jpg" alt="Speaker 2" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Captain Jason Dahl</a></h3>
-                <p>Consequuntur odio aut</p>
+                <h3><a href="#">Captain Denney Flanagan</a></h3>
+                <p>Retired United Pilot and Master of Ceremonies</p>
               </div>
             </div>
           </div>
@@ -155,71 +157,22 @@
             <div class="speaker" data-aos="fade-up" data-aos-delay="200">
               <img src="assets/img/speakers/2.jpg" alt="Speaker 2" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">First Officer LeRoy W. Homer</a></h3>
+                <h3><a href="#">Joseph Schmidt</a></h3>
+                <p>United Pilot and Violinist</p>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="300">
-              <img src="assets/img/speakers/3.jpg" alt="Speaker 3" class="img-fluid">
+              <img src="assets/img/speakers/4.jpg" alt="Speaker 3" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Cole Emmerich</a></h3>
-                <p>Fugiat laborum et</p>
-                <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
-                </div>
+                <h3><a href="#">Norm Silver</a></h3>
+                <p>Auctioneer</p>
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="speaker" data-aos="fade-up" data-aos-delay="100">
-              <img src="assets/img/speakers/4.jpg" alt="Speaker 4" class="img-fluid">
-              <div class="details">
-                <h3><a href="speaker-details.html">Jack Christiansen</a></h3>
-                <p>Debitis iure vero</p>
-                <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="speaker" data-aos="fade-up" data-aos-delay="200">
-              <img src="assets/img/speakers/5.jpg" alt="Speaker 5" class="img-fluid">
-              <div class="details">
-                <h3><a href="speaker-details.html">Alejandrin Littel</a></h3>
-                <p>Qui molestiae natus</p>
-                <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="speaker" data-aos="fade-up" data-aos-delay="300">
-              <img src="assets/img/speakers/6.jpg" alt="Speaker 6" class="img-fluid">
-              <div class="details">
-                <h3><a href="speaker-details.html">Willow Trantow</a></h3>
-                <p>Non autem dicta</p>
-                <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>-->
+        </div>
+      </div>
       </div>
 
     </section><!-- End Speakers Section -->
@@ -337,7 +290,7 @@
               <div class="col-md-2"><time>7:00 PM</time><br>-<time>7:30 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/speakers/2.jpg" alt="Hubert Hirthe">
+                  <img src="assets/img/speakers/5.jpg" alt="Hubert Hirthe">
                 </div>
                 <h4>Gala Dinner <span></span></h4>
                 <p>Options Available With Ticket</p>
@@ -348,7 +301,7 @@
               <div class="col-md-2"><time>7:30 PM</time><br>-<time>7:45 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/speakers/3.jpg" alt="Cole Emmerich">
+                  <img src="assets/img/speakers/5.jpg" alt="Cole Emmerich">
                 </div>
                 <h4>Break <span>Bar Opens For Service</span></h4>
                 <p>Veniam accusantium laborum nihil eos eaque accusantium aspernatur.</p>
@@ -359,9 +312,9 @@
               <div class="col-md-2"><time>7:45 PM</time><br>-<time>8:00 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/speakers/4.jpg" alt="Jack Christiansen">
+                  <img src="assets/img/speakers/3.jpg" alt="Jack Christiansen">
                 </div>
-                <h4>Annoucements <span>MC </span></h4>
+                <h4>Annoucements <span>Captain Denney Flanagan</span></h4>
                 <p>Some brief notes about the evening</p>
               </div>
             </div>
@@ -370,9 +323,9 @@
               <div class="col-md-2"><time>8:00 PM</time><br>-<time>8:30 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/speakers/5.jpg" alt="Alejandrin Littel">
+                  <img src="assets/img/speakers/4.jpg" alt="Alejandrin Littel">
                 </div>
-                <h4>Live Auction <span> Led by Auctioneer</span></h4>
+                <h4>Live Auction <span> Norm Silver</span></h4>
                 <p>Last call for Silent Auction.</p>
               </div>
             </div>
@@ -392,7 +345,7 @@
               <div class="col-md-2"><time>9:45 PM</time><br>-<time>10:00 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/speakers/4.jpg" alt="Jack Christiansen">
+                  <img src="assets/img/speakers/3.jpg" alt="Jack Christiansen">
                 </div>
                 <h4>Wrap Up and Awards<span> </span></h4>
                 <p>Thank you for coming and supporting our cause!</p>
