New Photo, better gallery image display

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <li><a href="#gallery">Gallery</a></li>
           <li><a href="#supporters">Sponsors</a></li>
           <li><a href="#contact">Contact</a></li>
-          <li class="buy-tickets"><a href="#buy-tickets">Get Tickets</a></li>
+          <li class="buy-tickets"><a href="#buy-tickets">Reserve Tickets</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
@@ -66,7 +66,7 @@
       <p class="mb-4 pb-0">October 3, 2021 - <a style="text-decoration:none" href="#venue">Gaylord Rockies Resort</a></p>
       <a href="https://www.youtube.com/embed/2gOo08NMSrs?start=10" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
 
-      <span><a href="#about" class="about-btn scrollto">Learn More</a><a href="#about" class="about-btn scrollto">In-Person Tickets</a><a href="#donate" class="about-btn scrollto">Donate</a></span>
+      <span><a href="#about" class="about-btn scrollto">Learn More</a><a href="#about" class="about-btn scrollto">Event Tickets</a><a href="#donate" class="about-btn scrollto">Donate</a></span>
       
     </div>
   </section><!-- End Intro Section -->
@@ -259,8 +259,7 @@
           </li>
         </ul>-->
 
-        <h3 class="sub-heading">Voluptatem nulla veniam soluta et corrupti consequatur neque eveniet officia. Eius
-          necessitatibus voluptatem quis labore perspiciatis quia.</h3>
+        <h3 class="sub-heading">A night of memorial and support of the new generation of aviators.</h3>
 
         <div class="tab-content row justify-content-center" data-aos="fade-up" data-aos-delay="200">
 
@@ -857,8 +856,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>Buy Tickets</h2>
-          <p>Velit consequatur consequatur inventore iste fugit unde omnis eum aut.</p>
+          <h2>Reserve Tickets</h2>
+          <p>Purchase your tickets for the in-person event, or access the event virtually for a donation as low as just $0.93. <br>The event will last until 10 PM, and the Gaylord is beautiful, so as a service, you can book a hotel room directly.</p>
         </div>
 
         <div class="row">
@@ -866,7 +865,7 @@
             <div class="card mb-5 mb-lg-0">
               <div class="card-body">
                 <h5 class="card-title text-muted text-uppercase text-center">Digital Access</h5>
-                <h6 class="card-price text-center">$XX Donation</h6>
+                <h6 class="card-price text-center">$0.93+ Donation</h6>
                 <hr>
                 <ul class="fa-ul">
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Support the Cause</li>
@@ -878,7 +877,7 @@
                 </ul>
                 <hr>
                 <div class="text-center">
-                  <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#buy-ticket-modal" data-ticket-type="standard-access">Buy Now</button>
+                  <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#buy-ticket-modal" data-ticket-type="standard-access">Donate Today</button>
                 </div>
               </div>
             </div>
@@ -899,7 +898,7 @@
                 </ul>
                 <hr>
                 <div class="text-center">
-                  <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#buy-ticket-modal" data-ticket-type="pro-access">Buy Now</button>
+                  <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#buy-ticket-modal" data-ticket-type="pro-access">Reserve Now</button>
                 </div>
               </div>
             </div>
@@ -908,7 +907,7 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title text-muted text-uppercase text-center">Premium Access</h5>
+                <h5 class="card-title text-muted text-uppercase text-center">Event Ticket + Hotel Room</h5>
                 <h6 class="card-price text-center">$350</h6>
                 <hr>
                 <ul class="fa-ul">
@@ -921,7 +920,7 @@
                 </ul>
                 <hr>
                 <div class="text-center">
-                  <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#buy-ticket-modal" data-ticket-type="premium-access">Buy Now</button>
+                  <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#buy-ticket-modal" data-ticket-type="premium-access">Reserve Now</button>
                 </div>
 
               </div>
