Compress large images

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <p class="mb-4 pb-0">October 3, 2021 - <a style="text-decoration:none" href="#venue">Gaylord Rockies Resort</a></p>
       <a href="https://www.youtube.com/embed/2gOo08NMSrs?start=10" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
 
-      <span><a href="#about" class="about-btn scrollto">Learn More</a><a href="#about" class="about-btn scrollto">Event Tickets</a><a href="#donate" class="about-btn scrollto">Donate</a></span>
+      <span><a href="#about" class="about-btn scrollto">Learn More</a><a href="#buy-tickets" class="about-btn scrollto">Event Tickets</a><a href="#buy-tickets" class="about-btn scrollto">Donate</a></span>
       
     </div>
   </section><!-- End Intro Section -->
