--- a/index.html
+++ b/index.html
@@ -835,8 +835,8 @@
     <section id="subscribe">
       <div class="container" data-aos="zoom-in">
         <div class="section-header">
-          <h2>Newsletter</h2>
-          <p>Rerum numquam illum recusandae quia mollitia consequatur.</p>
+          <h2>Notify Me</h2>
+          <p>Receive email updates on the Dahl Fund and the Gala events.</p>
         </div>
 
         <form method="POST" action="#">
@@ -877,7 +877,7 @@
                 </ul>
                 <hr>
                 <div class="text-center">
-                  <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#buy-ticket-modal" data-ticket-type="standard-access">Donate Today</button>
+                  <a href="https://www.dahlfund.org/donate/" class="btn">Donate Today</a>
                 </div>
               </div>
             </div>
@@ -981,7 +981,7 @@
             <div class="contact-address">
               <i class="ion-ios-location-outline"></i>
               <h3>Address</h3>
-              <address>Address Here</address>
+              <address>9956 West Remington Place Unit A-10 Suite 193<br> Littleton, CO 80128</address>
             </div>
           </div>
 
@@ -997,14 +997,14 @@
             <div class="contact-email">
               <i class="ion-ios-email-outline"></i>
               <h3>Email</h3>
-              <p><a href="mailto:info@example.com">info@example.com</a></p>
+              <p><a href="mailto:info@dahlfund.org">info@dahlfund.org</a></p>
             </div>
           </div>
 
         </div>
 
         <div class="form">
-          <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+          <form action="dah" method="post" role="form" class="php-email-form">
             <div class="row">
               <div class="form-group col-md-6">
                 <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
@@ -1044,48 +1044,46 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <img src="assets/img/logo.png" alt="TheEvenet">
-            <p>In alias aperiam. Placeat tempore facere. Officiis voluptate ipsam vel eveniet est dolor et totam porro. Perspiciatis ad omnis fugit molestiae recusandae possimus. Aut consectetur id quis. In inventore consequatur ad voluptate cupiditate debitis accusamus repellat cumque.</p>
+            <img src="assets/img/logo.png" alt="Dahl Gala Logo">
+            <p>Join Us October 2, 2021 at Gaylord Rockies Resort for a fundraising gala supporting the aviators of tomorrow.</p>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
               <li><i class="fa fa-angle-right"></i> <a href="#">Home</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="#">About us</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="#">Services</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="#speakers">Speakers</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="#">Tickets</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="#">Pledge Drive</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="#">Silent Auction</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>Other Sites</h4>
             <ul>
-              <li><i class="fa fa-angle-right"></i> <a href="#">Home</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="#">About us</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="#">Services</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="https://www.dahlfund.org">Captain Jason Dahl Scholarship</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="#">The LeRoy W. Homer Jr. Foundation</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="https://www.dahlfund.org/donate/">Donation Link</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="#"></a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="#"></a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-contact">
             <h4>Contact Us</h4>
             <p>
-              Address Line 1 <br>
-              Address Line 2<br>
+              9956 West Remington Place Unit A-10 Suite 193 <br>
+              Littleton, CO 80128<br>
               United States <br>
-              <strong>Phone:</strong> +1 000 000 0000<br>
-              <strong>Email:</strong> info@example.com<br>
+              <strong>Email:</strong> info@dahlfund.org<br>
             </p>
 
             <div class="social-links">
-              <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-              <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-              <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
-              <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+              <a href="https://twitter.com/dahlfund" class="twitter"><i class="fa fa-twitter"></i></a>
+              <a href="https://www.facebook.com/Captain-Jason-Dahl-Scholarship-Fund-194080197279716/" class="facebook"><i class="fa fa-facebook"></i></a>
+              <a href="https://www.instagram.com/dahlfund" class="instagram"><i class="fa fa-instagram"></i></a>
+              <a href="https://www.linkedin.com/company/captain-jason-dahl-scholarship-fund/" class="linkedin"><i class="fa fa-linkedin"></i></a>
             </div>
 
           </div>
