More image improvements, embeds videos

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <h1 class="mb-4 pb-0"><span>Heroes</span> of <span>United Flight 93</span><br><span style="color:white;font-weight:bold;font-size:36pt;">20-Year Remembrance Gala</span></h1>
       <p class="mb-4 pb-0">Presented by Captain Jason Dahl Scholarship Fund<br><span style="font-size:small">In Association with The LeRoy W. Homer Jr. Foundation</span></p>
       <p class="mb-4 pb-0">October 3, 2021 - <a style="text-decoration:none" href="#venue">Gaylord Rockies Resort</a></p>
-      <a href="https://www.youtube.com/embed/2gOo08NMSrs?start=10" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
+      <a href="https://www.youtube.com/embed/8sLHq-goOLM" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
 
       <span><a href="#about" class="about-btn scrollto">Learn More</a><a href="#buy-tickets" class="about-btn scrollto">Event Tickets</a><a href="#buy-tickets" class="about-btn scrollto">Donate</a></span>
       
@@ -72,7 +72,6 @@
   </section><!-- End Intro Section -->
 
   <main id="main">
-
     <!-- ======= About Section ======= -->
     <section id="about">
       <div class="container" data-aos="fade-up">
@@ -109,6 +108,7 @@
         <div class="row">
           <div class="col-md-6">
             <img src="assets/img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
+            <a href="https://www.youtube.com/embed/2gOo08NMSrs?start=10" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"><img src="assets/img/play-button.jpg" style="margin-left:45%; margin-top:50px; height:50px; width:auto;"></a>
           </div>
 
           <div class="col-md-6">
@@ -203,6 +203,7 @@
               <br>
               <h2>The LeRoy W. Homer Foundation</h2>
               <a href="https://leroywhomerjr.org">leroywhomerjr.org</a>
+              <a href="https://www.youtube.com/embed/30JqeHnjzDs" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"><img src="assets/img/play-button.jpg" style="margin-left:50px; height:50px; width:auto;"></a>
               <p>The LeRoy W. Homer Foundation was also founded in 2002 with the purpose of encouraging young adults aspiring to become professional pilots and increase awareness in the field of aviation. They have awarded 25 scholarships to students in aviation-related programs, all of whom now have a professional pilot's license.</p>
             </div>
           </div>
@@ -674,8 +675,8 @@
 
       <div class="container" data-aos="fade-up">
         <div class="section-header">
-          <h2>Gallery</h2>
-          <p>Check our gallery from the recent events</p>
+          <h2>Past Scholarship Winners</h2>
+          <p>Have an impact on the lives of aviators like them!</p>
         </div>
       </div>
 
@@ -683,11 +684,11 @@
         <a href="assets/img/gallery/1.jpg" class="venobox" data-gall="gallery-carousel"><img src="assets/img/gallery/1.jpg" alt=""></a>
         <a href="assets/img/gallery/2.jpg" class="venobox" data-gall="gallery-carousel"><img src="assets/img/gallery/2.jpg" alt=""></a>
         <a href="assets/img/gallery/3.jpg" class="venobox" data-gall="gallery-carousel"><img src="assets/img/gallery/3.jpg" alt=""></a>
-        <a href="assets/img/gallery/4.jpg" class="venobox" data-gall="gallery-carousel"><img src="assets/img/gallery/4.jpg" alt=""></a>
+        <a href="https://www.youtube.com/embed/Urp8Bh8wKzY" class="venobox mb-4" data-gall="gallery-carousel" data-vbtype="video" data-autoplay="true"><img src="assets/img/gallery/4.jpg" alt=""></a>
         <a href="assets/img/gallery/5.jpg" class="venobox" data-gall="gallery-carousel"><img src="assets/img/gallery/5.jpg" alt=""></a>
-        <a href="assets/img/gallery/6.jpg" class="venobox" data-gall="gallery-carousel"><img src="assets/img/gallery/6.jpg" alt=""></a>
+        <a href="https://www.youtube.com/embed/bCoXd0dQwks" class="venobox mb-4" data-gall="gallery-carousel" data-vbtype="video" data-autoplay="true"><img src="assets/img/gallery/6.jpg" alt=""></a>
         <a href="assets/img/gallery/7.jpg" class="venobox" data-gall="gallery-carousel"><img src="assets/img/gallery/7.jpg" alt=""></a>
-        <a href="assets/img/gallery/8.jpg" class="venobox" data-gall="gallery-carousel"><img src="assets/img/gallery/8.jpg" alt=""></a>
+        <a href="https://www.youtube.com/embed/zROB5XcNo3Y" class="venobox mb-4" data-gall="gallery-carousel" data-vbtype="video" data-autoplay="true"><img src="assets/img/gallery/8.jpg" alt=""></a>
       </div>
 
     </section><!-- End Gallery Section -->
