Promotes positioning of Captain Flanagan new logos, thank you notes

--- a/index.html
+++ b/index.html
@@ -39,9 +39,12 @@
 
       <div id="logo" class="pull-left">
         <a href="index.html" class="scrollto"><img src="assets/img/logo.png" class="base-logo"></a>
-        <a href="https://dahlfund.org" class="scrollto" style="margin-left:30px;"><img src="assets/img/dahl-logo.png" alt="" title=""></a>
       </div>
-
+      <div class="fund-logos">
+        <a href="https://dahlfund.org" class="scrollto"><img src="assets/img/dahl-logo.png" alt="" title="" style="max-width:120px;"></a>
+        <a href="https://leroywhomerjr.org"><img src="assets/img/leroy_logo_FNL.png"  style="max-width:90px;margin-left:15px;margin-top:5px;" alt="" title=""></a>
+      </div>
+    
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="index.html">Home</a></li>
@@ -49,8 +52,8 @@
           <li><a href="#speaker">Speaker</a></li>
           <li><a href="#schedule">Schedule</a></li>
           <li><a href="#venue">Venue</a></li>
-          <li><a href="#gallery">Gallery</a></li>
-          <li><a href="#supporters">Sponsors</a></li>
+          <!--<li><a href="#gallery">Gallery</a></li>
+          <li><a href="#supporters">Sponsors</a></li>-->
           <li><a href="#contact">Contact</a></li>
           <li class="buy-tickets"><a href="#buy-tickets">Reserve Tickets</a></li>
         </ul>
@@ -142,17 +145,25 @@
 
         </div>
 
-        <div class="section-header"><h2>Other Presenters</h2></div>
-        <div class="row">
-          <div class="col-lg-4 col-md-6">
-            <div class="speaker" data-aos="fade-up" data-aos-delay="200">
-              <img src="assets/img/speakers/3.jpg" alt="Speaker 2" class="img-fluid">
-              <div class="details">
-                <h3><a href="#">Captain Denney Flanagan</a></h3>
-                <p>Retired United Pilot and Master of Ceremonies</p>
-              </div>
+        <div class="section-header"><h2>Master of Ceremonies</h2></div>
+        
+        <div class="row" style="margin-bottom: 50px;">
+          <div class="col-md-6">
+            <div class="details">
+              <h2>Captain Denney Flanagan</h2>
+              <p>United Airlines Pilot and Extraordinary Customer Service Ambassador<br> Our Master of Ceremonies!</p>
+              <a href="https://www.youtube.com/watch?v=6_OKMUBLrrE" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"><img src="assets/img/play-button.jpg" style="margin-left:45%; margin-top:50px; height:50px; width:auto;"></a>
             </div>
           </div>
+          <div class="col-md-6">
+            <div data-aos="fade-up" data-aos-delay="200">
+              <img src="assets/img/speakers/3.jpg" style="max-width:400px;" alt="Speaker 2" class="img-fluid">
+            </div>
+          </div>
+        </div>
+
+        <div class="section-header"><h2>Other Presenters</h2></div>
+        <div class="row">
           <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="200">
               <img src="assets/img/speakers/2.jpg" alt="Speaker 2" class="img-fluid">
@@ -681,8 +692,8 @@
       </div>
 
       <div class="owl-carousel gallery-carousel" data-aos="fade-up" data-aos-delay="100">
-        <a href="assets/img/gallery/1.jpg" class="venobox" data-gall="gallery-carousel"><img src="assets/img/gallery/1.jpg" alt=""></a>
-        <a href="assets/img/gallery/2.jpg" class="venobox" data-gall="gallery-carousel"><img src="assets/img/gallery/2.jpg" alt=""></a>
+        <a href="assets/img/gallery/1.png" class="venobox" data-gall="gallery-carousel"><img src="assets/img/gallery/1.png" alt=""></a>
+        <a href="assets/img/gallery/2.png" class="venobox" data-gall="gallery-carousel"><img src="assets/img/gallery/2.png" alt=""></a>
         <a href="assets/img/gallery/3.jpg" class="venobox" data-gall="gallery-carousel"><img src="assets/img/gallery/3.jpg" alt=""></a>
         <a href="https://www.youtube.com/embed/Urp8Bh8wKzY" class="venobox mb-4" data-gall="gallery-carousel" data-vbtype="video" data-autoplay="true"><img src="assets/img/gallery/4.jpg" alt=""></a>
         <a href="assets/img/gallery/5.jpg" class="venobox" data-gall="gallery-carousel"><img src="assets/img/gallery/5.jpg" alt=""></a>
