Captain Flanagan Bio

--- a/index.html
+++ b/index.html
@@ -152,12 +152,21 @@
             <div class="details">
               <h2>Captain Denney Flanagan</h2>
               <p>United Airlines Pilot and Extraordinary Customer Service Ambassador<br> Our Master of Ceremonies!</p>
-              <a href="https://www.youtube.com/watch?v=6_OKMUBLrrE" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"><img src="assets/img/play-button.jpg" style="margin-left:45%; margin-top:50px; height:50px; width:auto;"></a>
+              <p>
+                Captain Denny Flanagan retired from the United States Navy and United Airlines after a successful and fulfilling 45 year flying career. 
+                As a Naval Aviator he spent three years with the National Science Foundation in support of Operation Deep Freeze on the Antarctic continent. 
+                He flew ski-equipped Lockheed C-130 Hercules and provided logistics for scientific experiments. 
+                He also flew the Lockheed P-3 Orion whose mission was to maintain surveillance of the Russian submarine fleet, search and rescue of ships in distress in the Atlantic Ocean 
+                and locate drug runners in the Gulf of Mexico. While at United, he rose to be Captain of the Boeing 757 and 767 aircraft. He would often go out of his way to ensure the 
+                flying public received the best possible service. It was not uncommon to see him pushing a wheel chair, speaking with customers or purchasing meals during long delays.  
+                His personal attention to his customers has landed him on the front page of the Wall Street Journal and on the morning shows of ABC, NBC and CBS.
+              </p>
             </div>
           </div>
           <div class="col-md-6">
             <div data-aos="fade-up" data-aos-delay="200">
-              <img src="assets/img/speakers/3.jpg" style="max-width:400px;" alt="Speaker 2" class="img-fluid">
+              <img src="assets/img/speakers/3.jpg" style="max-width:450px; margin-left:50px;" alt="Speaker 2" class="img-fluid">
+              <a href="https://www.youtube.com/watch?v=6_OKMUBLrrE" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"><img src="assets/img/play-button.jpg" style="margin-left:40%; margin-top:50px; height:50px; width:auto;"></a>
             </div>
           </div>
         </div>
