Heather Penney shortened video

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="row">
           <div class="col-md-6">
             <img src="assets/img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
-            <a href="https://www.youtube.com/embed/2gOo08NMSrs?start=10" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"><img src="assets/img/play-button.jpg" style="margin-left:45%; margin-top:50px; height:50px; width:auto;"></a>
+            <a href="https://youtu.be/Y5IByp9Ef4g" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"><img src="assets/img/play-button.jpg" style="margin-left:45%; margin-top:50px; height:50px; width:auto;"></a>
           </div>
 
           <div class="col-md-6">
