--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <h1 class="mb-4 pb-0"><span>Heroes</span> of <span>United Flight 93</span><br><span style="color:white;font-weight:bold;font-size:36pt;">20-Year Remembrance Gala</span></h1>
       <p class="mb-4 pb-0">Presented by Captain Jason Dahl Scholarship Fund<br><span style="font-size:small">In Association with The LeRoy W. Homer Jr. Foundation</span></p>
       <p class="mb-4 pb-0">October 3, 2021 - <a style="text-decoration:none" href="#venue">Gaylord Rockies Resort</a></p>
-      <a href="https://www.youtube.com/embed/8sLHq-goOLM" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
+      <a href="" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
 
       <span><a href="#about" class="about-btn scrollto">Learn More</a><a href="#buy-tickets" class="about-btn scrollto">Event Tickets</a><a href="#buy-tickets" class="about-btn scrollto">Donate</a></span>
       
@@ -737,7 +737,7 @@
 
           <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
-              <img src="assets/img/supporters/3.png" class="img-fluid" alt="">
+              <img src="assets/img/supporters/3.jpg" class="img-fluid" alt="">
             </div>
           </div>
 
@@ -878,10 +878,11 @@
 
         <div class="section-header">
           <h2>Reserve Tickets</h2>
-          <p>Purchase your tickets for the in-person event, or access the event virtually for a donation as low as just $0.93. <br>The event will last until 10 PM, and the Gaylord is beautiful, so as a service, you can book a hotel room directly.</p>
+          <h3 style="text-align:center;">Ticket Sales will be available here soon. Thank you for your patience.</h3>
+          <p>Purchase your tickets for the in-person event, or access the event virtually for a small donation. <br>The event will last until 10 PM, and the Gaylord is beautiful, so as a service, you can book a hotel room directly.</p>
         </div>
 
-        <div class="row">
+        <!--<div class="row">
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="card mb-5 mb-lg-0">
               <div class="card-body">
@@ -923,8 +924,8 @@
                 </div>
               </div>
             </div>
-          </div>
-          <!-- Pro Tier -->
+          </div>-->
+          <!-- Pro Tier 
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
             <div class="card">
               <div class="card-body">
@@ -947,7 +948,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div>-->
 
       </div>
 
