Removes FAQ until further notice

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <h2>About The Gala</h2>
             <h3>"Heroes Are Not Forgotten"</h3>
             <p>The Heroes of Flight 93 Gala is an annual charity fundraising event held by the Captain Jason Dahl Scholarship Fund, which honors the memory of those lost in the September 11th attacks by sponsoring future aviators with scholarships. Join us
-              for an evening of remembrance following the 20th Anniversary of September 11, 2001 with keynote speaker Heather Penney and a silent auction.
+              for an evening of remembrance following the 20th Anniversary of September 11, 2001 with keynote speaker Heather "Lucky" Penney and a silent auction.
             </p>
           </div>
           <div class="col-lg-3">
@@ -105,7 +105,7 @@
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h2>Keynote Speaker</h2>
-          <p>Learn More About Heather Penney</p>
+          <p>Learn More About Heather "Lucky" Penney</p>
         </div>
 
         <div class="row">
@@ -324,7 +324,7 @@
                   <img src="assets/img/speakers/5.jpg" alt="Cole Emmerich">
                 </div>
                 <h4>Break <span>Bar Opens For Service</span></h4>
-                <p>Veniam accusantium laborum nihil eos eaque accusantium aspernatur.</p>
+                <p></p>
               </div>
             </div>
 
@@ -356,7 +356,7 @@
                 <div class="speaker">
                   <img src="assets/img/speakers/1.jpg" alt="Keynote">
                 </div>
-                <h4>Keynote <span>Heather Penney</span></h4>
+                <h4>Keynote <span>Heather "Lucky" Penney</span></h4>
                 <p>Speaking about ...</p>
               </div>
             </div>
@@ -543,8 +543,8 @@
           <div class="col-lg-6 venue-info">
             <div class="row justify-content-center">
               <div class="col-11 col-lg-8">
-                <h3 style="color:white">Gaylord Resort</h3>
-                <p style="color:white">Iste nobis eum sapiente sunt enim dolores labore accusantium autem. Cumque beatae ipsam. Est quae sit qui voluptatem corporis velit. Qui maxime accusamus possimus. Consequatur sequi et ea suscipit enim nesciunt quia velit.</p>
+                <h3 style="color:white">Gaylord Rockies Resort</h3>
+                <p style="color:white">Just minutes from Denver International Airport and downtown Denver, Gaylord Rockies Resort & Convention Center provides access to many options for your stay in Colorado. It offers ample convention and outdoor space to support our gathering, along with many activities and amenities for your stay.</p>
               </div>
             </div>
           </div>
@@ -778,7 +778,7 @@
     </section><!-- End Sponsors Section -->
 
     <!-- =======  F.A.Q Section ======= -->
-    <section id="faq">
+    <!--<section id="faq">
 
       <div class="container" data-aos="fade-up">
 
@@ -850,7 +850,7 @@
 
       </div>
 
-    </section><!-- End  F.A.Q Section -->
+    </section>--><!-- End  F.A.Q Section -->
 
     <!-- ======= Subscribe Section ======= -->
     <section id="subscribe">
