Late March updates

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <ul class="nav-menu">
           <li class="menu-active"><a href="index.html">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#speaker">Speaker</a></li>
+          <li><a href="#speakers">Speaker</a></li>
           <li><a href="#schedule">Schedule</a></li>
           <li><a href="#venue">Venue</a></li>
           <!--<li><a href="#gallery">Gallery</a></li>
@@ -66,7 +66,7 @@
     <div class="intro-container" data-aos="zoom-in" data-aos-delay="100">
       <h1 class="mb-4 pb-0"><span>Heroes</span> of <span>United Flight 93</span><br><span style="color:white;font-weight:bold;font-size:36pt;">20-Year Remembrance Gala</span></h1>
       <p class="mb-4 pb-0">Presented by Captain Jason Dahl Scholarship Fund<br><span style="font-size:small">In Association with The LeRoy W. Homer Jr. Foundation</span></p>
-      <p class="mb-4 pb-0">October 3, 2021 - <a style="text-decoration:none" href="#venue">Gaylord Rockies Resort</a></p>
+      <p class="mb-4 pb-0">Saturday, October 2, 2021 - <a style="text-decoration:none" href="#venue">Gaylord Rockies Resort</a></p>
       <a href="" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
 
       <span><a href="#about" class="about-btn scrollto">Learn More</a><a href="#buy-tickets" class="about-btn scrollto">Event Tickets</a><a href="#buy-tickets" class="about-btn scrollto">Donate</a></span>
@@ -93,7 +93,7 @@
           </div>
           <div class="col-lg-3">
             <h3>When</h3>
-            <p>Sunday, October 3, 2021</p>
+            <p>Saturday, October 2, 2021</p>
             <p>5pm to 10pm</p>
           </div>
         </div>
@@ -188,6 +188,20 @@
               <div class="details">
                 <h3><a href="#">Norm Silver</a></h3>
                 <p>Auctioneer</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="section-header"><h2>Honored Guests</h2></div>
+        <div class="row">
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker" data-aos="fade-up" data-aos-delay="200">
+              <img src="assets/img/speakers/5.jpg" alt="John Werth" class="img-fluid">
+              <div class="details">
+                <h3><a href="#">John Werth</a></h3>
+                <p>Flight 93 ATC Controller, 9/11/2001</p>
               </div>
             </div>
           </div>
