--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="row">
           <div class="col-md-6">
             <img src="assets/img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
-            <a href="https://youtu.be/Y5IByp9Ef4g" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"><img src="assets/img/play-button.jpg" style="margin-left:45%; margin-top:50px; height:50px; width:auto;"></a>
+            <a href="https://youtu.be/4AY1uVlgl-g" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"><img src="assets/img/play-button.jpg" style="margin-left:45%; margin-top:50px; height:50px; width:auto;"></a>
           </div>
 
           <div class="col-md-6">
@@ -371,7 +371,7 @@
                   <img src="assets/img/speakers/1.jpg" alt="Keynote">
                 </div>
                 <h4>Keynote <span>Heather "Lucky" Penney</span></h4>
-                <p>Speaking about ...</p>
+                <p>Speaking about everyday heroism</p>
               </div>
             </div>
 
