--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <section id="intro">
     <div class="intro-container" data-aos="zoom-in" data-aos-delay="100">
       <h1 class="mb-4 pb-0"><span>Heroes</span> of <span>United Flight 93</span><br><span style="color:white;font-weight:bold;font-size:36pt;">20-Year Remembrance Gala</span></h1>
-      <p class="mb-4 pb-0">Presented by Captain Jason Dahl Scholarship Fund<br><span style="font-size:small">In Association with The LeRoy W. Homer Jr. Foundation</span></p>
+      <p class="mb-4 pb-0">Presented by Captain Jason Dahl Scholarship Fund<br><span>In Association with The LeRoy W. Homer Jr. Foundation</span></p>
       <p class="mb-4 pb-0">Saturday, October 2, 2021 - <a style="text-decoration:none" href="#venue">Gaylord Rockies Resort</a></p>
       <a href="" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
 
@@ -1022,11 +1022,11 @@
           </div>
 
           <div class="col-md-4">
-            <div class="contact-phone">
+            <!--<div class="contact-phone">
               <i class="ion-ios-telephone-outline"></i>
               <h3>Phone Number</h3>
               <p><a href="tel:+155895548855">+1 000 000 0000</a></p>
-            </div>
+            </div>-->
           </div>
 
           <div class="col-md-4">
