--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <h1 class="mb-4 pb-0"><span>Heroes</span> of <span>United Flight 93</span><br><span style="color:white;font-weight:bold;font-size:36pt;">20-Year Remembrance Gala</span></h1>
       <p class="mb-4 pb-0">Presented by Captain Jason Dahl Scholarship Fund<br><span>In Association with The LeRoy W. Homer Jr. Foundation</span></p>
       <p class="mb-4 pb-0">Saturday, October 2, 2021 - <a style="text-decoration:none" href="#venue">Gaylord Rockies Resort</a></p>
-      <a href="" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
+      <!--<a href="" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>-->
 
       <span><a href="#about" class="about-btn scrollto">Learn More</a><a href="#buy-tickets" class="about-btn scrollto">Event Tickets</a><a href="#buy-tickets" class="about-btn scrollto">Donate</a></span>
       
